style.css
@font-face {
    font-family: 'CentraNo2';
    src: url('fonts/CentraNo2-Light.woff2') format('woff2'),
         url('fonts/CentraNo2-Light.woff') format('woff');
    font-weight: 300;
    font-style: normal;
}

@font-face {
    font-family: 'CentraNo2';
    src: url('fonts/CentraNo2-Medium.woff2') format('woff2'),
         url('fonts/CentraNo2-Medium.woff') format('woff');
    font-weight: 500;
    font-style: normal;
}

* {
    margin: 0;
    padding: 0;
  }
  body {
    font-family: 'CentraNo2', Arial, sans-serif;
    font-weight: 300;

    

    font: 100% / 1.5 CentraNo2;
  /*   background: linear-gradient(135deg, #3e028c -50%, #000 100%); */
    background-image: linear-gradient(135deg, #4248ED 0%, #000099 25%, #020247 50%, #000000 75%, #1c1a27 100%);
  }
  ::-webkit-scrollbar { 
      display: none; 
  }

.fixed h1 {
  font-family: 'CentraNo2', Arial, sans-serif;
  font-weight: 500;
  font-size: 48px;
  margin: 0; /* Remove large margins */
}

.fixed p {
  font-family: 'CentraNo2', Arial, sans-serif;
  font-weight: 300;
  font-size: 24px;
  margin: 0;
  width: 100%;
  max-width: 800px; /* or whatever width you prefer */
}

.fixed {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;   /* Start items at the top */
  align-items: center;
  row-gap: 350px;                 /* Add space between all children */
  color: white;
  text-align: center;
  width: 100vw;
  height: 100vh;
  padding-top: 300px;
  padding-bottom: 40px;
}

.parallax {
  position: relative;
  min-height: 100vh;
  height: 100vh;
  overflow-x: hidden;
  overflow-y: auto;
  -webkit-perspective: 1px;
  perspective: 1px;
}
  
  .parallax__layer {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
  }
  
  .parallax__layer--base {
    -webkit-transform: translateZ(0);
    transform: translateZ(0);
  }
  
  .parallax__layer--back {
    -webkit-transform: translateZ(-2px) scale(3);
    transform: translateZ(-2px) scale(3);
  }
  .parallax__layer--back2 {
    -webkit-transform: translateZ(-6px) scale(5);
    transform: translateZ(-6px) scale(5);
  }
  .parallax__layer--back3 {
    -webkit-transform: translateZ(-12px) scale(6);
    transform: translateZ(-12px) scale(6);
  }
  
  /* add some padding to force scrollbars */
  .parallax__layer {
    padding: 100vh 0;
  }
  
  .starfield > * {
    background-size: 200px 200px;
    background-image: radial-gradient(
        2px 2px at 40px 60px,
        #ccc,
        rgba(0, 0, 0, 0)
      ),
      radial-gradient(2px 2px at 20px 50px, #ddd, rgba(0, 0, 0, 0)),
      radial-gradient(2px 2px at 30px 100px, #eee, rgba(0, 0, 0, 0)),
      radial-gradient(2px 2px at 40px 60px, rgb(0, 255, 0), rgba(0, 0, 0, 0)),
      radial-gradient(2px 2px at 110px 90px, rgb(255, 255, 255), rgba(0, 0, 0, 0)),
      radial-gradient(2px 2px at 190px 150px, rgb(255, 255, 255), rgba(0, 0, 0, 0));
    background-repeat: repeat;
  }
  .starfield > * {
    position: absolute;
    top: -250%;
    left: 0;
    height: 500%;
    width: 100%;
  }
  
  .starfield span:nth-child(2) {
    transform: rotate(45deg);
  }
  .starfield span:nth-child(3) {
    transform: rotate(69deg);
  }
  .starfield span:nth-child(4) {
    transform: rotate(123deg);
  }
  

